force-app/main/default/objects/Call_Log__c/Call_Log__c.object-meta.xml
<CustomObject>
    <label>Call Log</label>
    <nameField>
        <label>CALL ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>