force-app/main/default/objects/Call_Log__c/fields/Bill_Time__c.field-meta.xml
<CustomField>
    <fullName>Bill_Time__c</fullName>
    <label>Bill Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>