force-app/main/default/objects/Call_Log__c/fields/Contact_Record_Last_Modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_Last_Modified_Date_Time__c</fullName>
    <label>Contact Record Last Modified Date Time</label>
    <type>DateTime</type>
</CustomField>