force-app/main/default/objects/Call_Log__c/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>