force-app/main/default/objects/Call_Log__c/fields/Disposition2__c.field-meta.xml
<CustomField>
    <fullName>Disposition2__c</fullName>
    <label>Disposition2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>