force-app/main/default/objects/Call_Log__c/fields/First_Agent__c.field-meta.xml
<CustomField>
    <fullName>First_Agent__c</fullName>
    <label>First Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>