force-app/main/default/objects/Call_Log__c/fields/isUploaded__c.field-meta.xml
<CustomField>
    <fullName>isUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uploaded</label>
    <type>Checkbox</type>
</CustomField>