force-app/main/default/objects/Call_Log__c/fields/Last_Agent__c.field-meta.xml
<CustomField>
    <fullName>Last_Agent__c</fullName>
    <label>Last Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>