force-app/main/default/objects/Call_Log__c/fields/Last_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign__c</fullName>
    <label>Last Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>