force-app/main/default/objects/Call_Log__c/fields/Last_Campaign_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign_Attempts__c</fullName>
    <label>Last Campaign Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>