force-app/main/default/objects/Call_Log__c/fields/Last_Dispo__c.field-meta.xml
<CustomField>
    <fullName>Last_Dispo__c</fullName>
    <label>Last Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>