force-app/main/default/objects/Call_Log__c/fields/Last_Dispo_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Dispo_Time__c</fullName>
    <label>Last Dispo Time</label>
    <type>DateTime</type>
</CustomField>