force-app/main/default/objects/Call_Log__c/fields/Last_List__c.field-meta.xml
<CustomField>
    <fullName>Last_List__c</fullName>
    <label>Last List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>