force-app/main/default/objects/Call_Log__c/fields/Last_Module__c.field-meta.xml
<CustomField>
    <fullName>Last_Module__c</fullName>
    <label>Last Module</label>
    <length>255</length>
    <type>Text</type>
</CustomField>