force-app/main/default/objects/Call_Log__c/fields/Last_State__c.field-meta.xml
<CustomField>
    <fullName>Last_State__c</fullName>
    <label>Last State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>