force-app/main/default/objects/Call_Log__c/fields/Mediatype__c.field-meta.xml
<CustomField>
    <fullName>Mediatype__c</fullName>
    <label>Mediatype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>