force-app/main/default/objects/Call_Log__c/fields/Original_Itc__c.field-meta.xml
<CustomField>
    <fullName>Original_Itc__c</fullName>
    <label>Original ITC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>