force-app/main/default/objects/Call_Log__c/fields/Queue_Callback_Ani__c.field-meta.xml
<CustomField>
    <fullName>Queue_Callback_Ani__c</fullName>
    <label>Queue Callback Ani</label>
    <length>255</length>
    <type>Text</type>
</CustomField>