force-app/main/default/objects/Call_Log__c/fields/Queue_Time__c.field-meta.xml
<CustomField>
    <fullName>Queue_Time__c</fullName>
    <label>Queue Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>