force-app/main/default/objects/Call_Log__c/fields/Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Id__c</fullName>
    <label>Salesforce_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>