force-app/main/default/objects/Call_Log__c/fields/Start_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Start_Timestamp__c</fullName>
    <label>Start Timestamp</label>
    <type>DateTime</type>
</CustomField>