force-app/main/default/objects/Call_Log__c/fields/Station_Id__c.field-meta.xml
<CustomField>
    <fullName>Station_Id__c</fullName>
    <label>Station Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>