force-app/main/default/objects/Call_Log__c/fields/Third_Party_Connected__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Connected__c</fullName>
    <label>Third Party Connected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>