force-app/main/default/objects/Call_Log__c/fields/VM__c.field-meta.xml
<CustomField>
    <fullName>VM__c</fullName>
    <label>VM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>