force-app/main/default/objects/Call_Log__c/validationRules/No_null_or_Blank_Call_Ids.validationRule-meta.xml
<ValidationRule>
    <fullName>No_null_or_Blank_Call_Ids</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK(Name) || ISNULL(Name))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>NO EMPTIES!</errorMessage>
</ValidationRule>