force-app/main/default/objects/Call_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Last_Campaign__c</columns>
    <columns>Call_Type__c</columns>
    <columns>Disposition__c</columns>
    <columns>Agent__c</columns>
    <columns>ANI__c</columns>
    <columns>DNIS__c</columns>
    <columns>Salesforce_Id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>End_Timestamp__c</columns>
    <columns>Contact_Type__c</columns>
    <columns>Contact_Type_2__c</columns>
    <columns>Disposition2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>greaterOrEqual</operation>
        <value>1442060</value>
    </filters>
    <label>All Records</label>
</ListView>